objects/FSL_SPTechCert_Stage__c.object
<CustomObject>
    <fields>
        <fullName>Certification__c</fullName>
        <label>Certification</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMNRowId__c</fullName>
        <externalId>true</externalId>
        <label>SMNRowId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPCode__c</fullName>
        <label>SPCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPRowId__c</fullName>
        <externalId>true</externalId>
        <label>SPRowId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceModelName__c</fullName>
        <label>ServiceModelName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechRowId__c</fullName>
        <externalId>true</externalId>
        <label>TechRowId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>FSL_SPTechCert_Stage</label>
    <nameField>
        <label>FSL_SPTechCert_Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FSL_SPTechCert_Stages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>